EXPLORE-35: Updated Controllers and Repo